--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>
     body {
       background-color: #0d0c1d;
-      background-image: url('https://images.unsplash.com/photo-1549887534-ccdb5c5e4b80?auto=format&fit=crop&w=1950&q=80');
+      background-image: url('https://cdn.pixabay.com/photo/2020/12/13/10/17/astrology-5827692_1280.jpg');
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
@@ -22,12 +22,12 @@
 
     h1 {
       font-size: 2.5rem;
-      color: #e9c5ff;
+      color: #eac4ff;
       margin-bottom: 0.2rem;
     }
 
     h2 {
-      color: #f1d8ff;
+      color: #f3d0ff;
     }
 
     p.subtitle {
@@ -41,15 +41,19 @@
       font-size: 1.1rem;
       width: 60%;
       max-width: 400px;
-      border: 2px solid #c98cf1;
+      border: 2px solid #ce9df2;
       border-radius: 8px;
-      background-color: rgba(255, 255, 255, 0.1);
+      background-color: rgba(255, 255, 255, 0.08);
       color: #fff;
       margin-bottom: 1rem;
     }
 
+    input::placeholder {
+      color: #e1c1ff;
+    }
+
     button {
-      background-color: #bf74e8;
+      background-color: #bb6ce9;
       color: #fff;
       border: none;
       padding: 0.7rem 1.5rem;
@@ -61,7 +65,7 @@
     }
 
     button:hover {
-      background-color: #9d58cc;
+      background-color: #994dca;
       transform: scale(1.05);
     }
 
@@ -72,7 +76,7 @@
 
     .cta {
       margin-top: 3rem;
-      background-color: rgba(185, 115, 231, 0.85);
+      background-color: rgba(157, 80, 194, 0.9);
       padding: 2rem;
       border-radius: 12px;
       display: inline-block;
@@ -82,7 +86,7 @@
       display: inline-block;
       margin: 0.5rem 1rem;
       padding: 0.7rem 1.2rem;
-      background-color: #8236a6;
+      background-color: #7e2d9f;
       color: white;
       text-decoration: none;
       border-radius: 8px;
